# cursor-cookbook-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cursor-cookbook-cli/: Cargo.toml
crates/cursor-cookbook-cli/src/: main.rs
crates/cursor-cookbook-cli/tests/: json_output.rs
crates/cursor-sdk/: Cargo.toml
crates/cursor-sdk/examples/: quickstart.rs
crates/cursor-sdk/src/: client.rs  error.rs  lib.rs  types.rs
crates/cursor-sdk/tests/: http_client.rs
