[workspace]
members = ["crates/cursor-sdk", "crates/cursor-cookbook-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/damienstanton/cursor-cookbook-rs"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env"] }
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
