[package]
name = "cursor-cookbook-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI demo for the cursor-sdk Cloud Agents cookbook"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
cursor-sdk = { path = "../cursor-sdk" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
wiremock = "0.6.5"
