[package]
name = "cursor-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
eventsource-stream.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6.5"
